# lindera-unity-binding

./: .gitignore  CLAUDE.md  README.md  README_EN.md
.github/workflows/: build-native.yml  export-package.yml  release.yml  test.yml  webgl-deploy.yml
Assets/Lindera/: CHANGELOG.md  README.md  package.json
Assets/Lindera/Editor/: LinderaPackageExporter.cs
Assets/Lindera/Plugins/WebGL/: LinderaWebGL.jslib
Assets/Lindera/Runtime/: ILinderaTokenizer.cs  Lindera.asmdef  LinderaException.cs  LinderaToken.cs  LinderaTokenizer.cs  LinderaTokenizerFactory.cs  LinderaTokenizerWebGL.cs  NativeMethods.cs  NativeMethodsGenerated.cs
Assets/Samples/Lindera/BasicUsage/: Lindera.Samples.asmdef  LinderaSample.unity
Assets/Scripts/Lindera/: Lindera.asmdef  NativeMethods.cs  NativeMethodsGenerated.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/StreamingAssets/: lindera_wasm.js
Assets/Tests/Editor/: Lindera.Editor.Tests.asmdef  Lindera.Tests.Editor.asmdef  LinderaExceptionTests.cs  LinderaTokenTests.cs  LinderaTokenizerFactoryTests.cs  NativeMethodsTests.cs
Assets/Tests/Runtime/: Lindera.Runtime.Tests.asmdef  Lindera.Tests.Runtime.asmdef  LinderaTokenizerIntegrationTests.cs
Editor/: Lindera.Editor.asmdef
ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
Runtime/: Lindera.asmdef  LinderaTokenizer.cs  NativeMethods.cs
docs/: WEBGL_WASM_RESEARCH.md
native/lindera-ffi/: Cargo.toml  build.rs
native/lindera-ffi/src/: lib.rs
native/lindera-wasm/: package-lock.json  package.json
(+4 files in other folders)
